--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@ theme: "starter-hugo-academic"
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Yannic Rudá Damm # Website name
+title: Damm, Y. R. # Website name
 baseurl: 'http://yannicrudadamm.netlify.app' # Website URL
 copyright: '' # Footer text, e.g. '© {year} Me'
 
