--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,8 +4,8 @@ theme: "starter-hugo-academic"
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Damm, Y. R. # Website name
-baseurl: 'http://yannicrudadamm.netlify.app' # Website URL
+title: Damm, Y. # Website name
+baseurl: 'http://yannicdamm.netlify.app' # Website URL
 copyright: '' # Footer text, e.g. '© {year} Me'
 
 ############################
