--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,6 +22,6 @@ main:
   # - name: Courses
   #   url: courses/
   #   weight: 60
-  - name: Contact
-    url: '#contact'
-    weight: 30
+  # - name: Contact
+  #   url: '#contact'
+  #   weight: 30
